--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass ./SASS/src/scss/main.scss:./public/css/style.css -w --style compressed",
+    "sass": "sass ./SASS/src/main.scss:./public/css/style.css -w --style compressed",
     "prefix": "postcss ./public/css/style.css --use autoprefixer -d ./public/css/prefixed/"
 
   },
